# onnx-app

./: .gitignore  CMakeLists.txt
include/: utils.hpp
src/: CMakeLists.txt  main.cpp
